--- a/content/data/config.json
+++ b/content/data/config.json
@@ -46,7 +46,7 @@
             {
                 "type": "Link",
                 "label": "Contact",
-                "url": "mailto:thisismyemail.@myemail.me",
+                "url": "joycexintianhuang@gmail.com",
                 "altText": ""
             },
             {
