--- a/content/data/config.json
+++ b/content/data/config.json
@@ -52,7 +52,7 @@
             {
                 "type": "Link",
                 "label": "GitHub",
-                "url": "https://github.com/netlify-templates",
+                "url": "https://github.com/joycexhuang",
                 "altText": "Netlify templates"
             }
         ],
