config.json: updated phoneNumber in contacts

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -59,7 +59,7 @@
         "contacts": {
             "type": "ContactBlock",
             "title": "Contact details",
-            "phoneNumber": "608-642-8211",
+            "phoneNumber": "",
             "phoneAltText": "My phone number",
             "email": "thisismyemail.@myemail.me",
             "emailAltText": "My email",
