config.json: updated primaryLinks in footer

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -50,6 +50,17 @@
                 "altText": ""
             },
             {
+                "type": "Button",
+                "label": "Learn more",
+                "altText": "",
+                "url": "https://www.linkedin.com/in/joyce-huang-8494a224a/",
+                "showIcon": false,
+                "icon": "arrowRight",
+                "iconPosition": "right",
+                "style": "primary",
+                "elementId": ""
+            },
+            {
                 "type": "Link",
                 "label": "GitHub",
                 "url": "https://github.com/joycexhuang",
