--- a/content/data/config.json
+++ b/content/data/config.json
@@ -51,7 +51,7 @@
             },
             {
                 "type": "Button",
-                "label": "linkedin",
+                "label": "LINKEDIN",
                 "altText": "",
                 "url": "https://www.linkedin.com/in/joyce-huang-8494a224a/",
                 "showIcon": false,
