--- a/content/data/config.json
+++ b/content/data/config.json
@@ -54,6 +54,16 @@
                 "label": "GitHub",
                 "url": "https://github.com/joycexhuang",
                 "altText": "Netlify templates"
+            },
+            {
+                "type": "Link",
+                "label": "Learn more",
+                "altText": "",
+                "url": "https://www.linkedin.com/in/joyce-huang-8494a224a/",
+                "showIcon": false,
+                "icon": "arrowRight",
+                "iconPosition": "right",
+                "elementId": ""
             }
         ],
         "copyrightText": "Powered by [Netlify](https://www.netlify.com/)\n\n© 2025\n\n",
