config.json: updated label in primaryLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -57,7 +57,7 @@
             },
             {
                 "type": "Link",
-                "label": "Learn more",
+                "label": "linkedin",
                 "altText": "",
                 "url": "https://www.linkedin.com/in/joyce-huang-8494a224a/",
                 "showIcon": false,
