--- a/content/data/config.json
+++ b/content/data/config.json
@@ -39,7 +39,7 @@
         "primaryLinks": [
             {
                 "type": "Link",
-                "label": "Info",
+                "label": "About",
                 "url": "/info",
                 "altText": ""
             },
