config.json: updated url in primaryLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -40,7 +40,7 @@
             {
                 "type": "Link",
                 "label": "About",
-                "url": "/info",
+                "url": "/about",
                 "altText": ""
             },
             {
