--- a/content/data/config.json
+++ b/content/data/config.json
@@ -39,8 +39,8 @@
         "primaryLinks": [
             {
                 "type": "Link",
-                "label": "Info",
-                "url": "/info",
+                "label": "About",
+                "url": "/about",
                 "altText": ""
             },
             {
@@ -54,6 +54,16 @@
                 "label": "GitHub",
                 "url": "https://github.com/joycexhuang",
                 "altText": "Netlify templates"
+            },
+            {
+                "type": "Link",
+                "label": "linkedin",
+                "altText": "",
+                "url": "https://www.linkedin.com/in/joyce-huang-8494a224a/",
+                "showIcon": false,
+                "icon": "arrowRight",
+                "iconPosition": "right",
+                "elementId": ""
             }
         ],
         "copyrightText": "Powered by [Netlify](https://www.netlify.com/)\n\n© 2025\n\n",
