config.json: updated label in primaryLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -20,7 +20,7 @@
             },
             {
                 "type": "Link",
-                "label": "Learn more",
+                "label": "Portfolio",
                 "altText": "",
                 "url": "/portfolio",
                 "showIcon": false,
