--- a/content/data/config.json
+++ b/content/data/config.json
@@ -17,6 +17,16 @@
                 "type": "Link",
                 "label": "Projects",
                 "url": "/projects"
+            },
+            {
+                "type": "Link",
+                "label": "Photos",
+                "altText": "",
+                "url": "/portfolio",
+                "showIcon": false,
+                "icon": "arrowRight",
+                "iconPosition": "right",
+                "elementId": ""
             }
         ],
         "socialLinks": [
